--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,12 @@ include(ExternalProject)
 
 set(CMAKE_STAGING_PREFIX ${PROJECT_SOURCE_DIR}/build/stage)
 set(STAGING_DIR ${PROJECT_SOURCE_DIR}/build/stage)
+set(CMAKE_C_COMPILER /usr/bin/gcc-11)
+set(ADIOS2_DIR /home/kein/repos/ADIOS2_bi/build)
 
 find_package(MPI REQUIRED)
 find_package(OpenMP REQUIRED)
+find_package(ADIOS2 REQUIRED)
 
 if(NOT TARGET MPI::MPI_CXX)
     add_library(MPI::MPI_CXX IMPORTED INTERFACE)
@@ -55,36 +58,76 @@ ExternalProject_Add(argparse
     -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
     -DCMAKE_INSTALL_PREFIX=${STAGING_DIR}
     -DBUILD_SHARED_LIBS=OFF
+    -DARGPARSE_BUILD_SAMPLES=OFF
+    -DARGPARSE_BUILD_TESTS=OFF
 )
 
-ExternalProject_Add(adios2
-    PREFIX adios2
-    SOURCE_DIR ${PROJECT_SOURCE_DIR}/lib/adios2
+# ExternalProject_Add(adios2
+#     PREFIX adios2
+#     SOURCE_DIR ${PROJECT_SOURCE_DIR}/lib/adios2
+#     CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
+#     -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
+#     -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
+#     -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
+#     -DCMAKE_INSTALL_PREFIX=${STAGING_DIR}
+#     -DBUILD_SHARED_LIBS=OFF
+#     -DADIOS2_BUILD_EXAMPLES=OFF
+#     -DBUILD_TESTING=OFF
+#     -DADIOS2_USE_MPI=ON
+#     # -DMPI_CXX_FOUND=${MPI_CXX_FOUND}
+#     # -DMPI_CXX_COMPILER=${MPI_CXX_COMPILER}
+#     # -DMPI_CXX_COMPILE_FLAGS=${MPI_CXX_COMPILE_FLAGS}
+#     # -DMPI_CXX_INCLUDE_PATH=${MPI_CXX_INCLUDE_PATH}
+#     # -DMPI_CXX_LINK_FLAGS=${MPI_CXX_LINK_FLAGS}
+#     # -DMPI_CXX_LIBRARIES=${MPI_CXX_LIBRARIES}
+#     # -DMPI_C_FOUND=${MPI_C_FOUND}
+#     # -DMPI_C_COMPILER=${MPI_C_COMPILER}
+#     # -DMPI_C_COMPILE_FLAGS=${MPI_C_COMPILE_FLAGS}
+#     # -DMPI_C_INCLUDE_PATH=${MPI_C_INCLUDE_PATH}
+#     # -DMPI_C_LINK_FLAGS=${MPI_C_LINK_FLAGS}
+#     # -DMPI_C_LIBRARIES=${MPI_C_LIBRARIES}
+# )
+
+ExternalProject_Add(json
+    PREFIX json
+    SOURCE_DIR ${PROJECT_SOURCE_DIR}/lib/json
     CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
     -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
     -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
     -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
     -DCMAKE_INSTALL_PREFIX=${STAGING_DIR}
     -DBUILD_SHARED_LIBS=OFF
-    -DADIOS2_BUILD_EXAMPLES=OFF
     -DBUILD_TESTING=OFF
+    -DJSON_BuildTests=OFF
 )
 
 include_directories(${PROJECT_SOURCE_DIR}/lib/spdlog/include)
 include_directories(${PROJECT_SOURCE_DIR}/lib/argparse/include)
-include_directories(${PROJECT_SOURCE_DIR}/lib/adios2/bindings)
+# include_directories(${PROJECT_SOURCE_DIR}/lib/adios2/bindings)
+include_directories(${PROJECT_SOURCE_DIR}/lib/json/include)
+include_directories(${ADIOS2_DIR})
+# include_directories(${STAGING_DIR}/include)
 
 add_executable(MDNCPP ${PROJECT_SOURCE_DIR}/src/MDNCPP.cpp)
+add_executable(AWTest ${PROJECT_SOURCE_DIR}/tests/ADIOS_writer.cpp)
 
-message(STATUS "Run: ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${MPIEXEC_PREFLAGS} EXECUTABLE ${MPIEXEC_POSTFLAGS} ARGS")
+# message(STATUS "Run: ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${MPIEXEC_PREFLAGS} EXECUTABLE ${MPIEXEC_POSTFLAGS} ARGS")
 target_link_libraries(MDNCPP PUBLIC MPI::MPI_CXX)
 target_link_libraries(MDNCPP PUBLIC OpenMP::OpenMP_CXX)
+target_link_libraries(MDNCPP PRIVATE adios2::cxx11_mpi MPI::MPI_C)
+
+target_link_libraries(AWTest PUBLIC MPI::MPI_CXX)
+target_link_libraries(AWTest PUBLIC OpenMP::OpenMP_CXX)
+target_link_libraries(AWTest PRIVATE adios2::cxx11_mpi MPI::MPI_C)
 
 add_dependencies(${PROJECT_NAME} spdlog)
 add_dependencies(${PROJECT_NAME} argparse)
-add_dependencies(${PROJECT_NAME} adios2)
-# target_link_libraries(MDNCPP STATIC ${STAGING_DIR}/lib/spdlog.a)
-# target_link_libraries(MDNCPP PUBLIC ${STAGING_DIR}/include)
+# add_dependencies(${PROJECT_NAME} adios2)
+add_dependencies(${PROJECT_NAME} json)
+
+add_dependencies(AWTest spdlog)
+add_dependencies(AWTest argparse)
+add_dependencies(AWTest json)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
