--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "lib/spdlog"]
 	path = lib/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "lib/yas"]
+	path = lib/yas
+	url = https://github.com/niXman/yas
+[submodule "lib/json"]
+	path = lib/json
+	url = https://github.com/nlohmann/json
