--- a/src/config.hpp.in
+++ b/src/config.hpp.in
@@ -2,7 +2,7 @@
 #define __MDN_CONFIG_HPP__
 
 #ifndef MDNCPP_VERSION
-#define __MDNCPP_VERSION__ "0.0.1"
+#define __MDNCPP_VERSION__ "UNDEFINED"
 #else
 #define __MDNCPP_VERSION__ "@MDNCPP_VERSION@"
 #endif // !MDNCPP_VERSION
@@ -11,5 +11,9 @@
 #ifdef MDNCPP_BUILD_DEBUG
 #define __MDN_BUILD_DEBUG_CODE__
 #endif // MDN_BUILD_DEBUG
+
+#ifdef MDNCPP_ENABLE_PROFILING
+#define __MDN_PROFILING__
+#endif // MDNCPP_ENABLE_PROFILING
 
 #endif // !__MDN_CONFIG_HPP__
