--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,3 @@
-[submodule "lib/argparse"]
-	path = lib/argparse
-	url = https://github.com/p-ranav/argparse
-[submodule "lib/adios2"]
-	path = lib/adios2
-	url = https://github.com/ornladios/ADIOS2
-[submodule "lib/spdlog"]
-	path = lib/spdlog
-	url = https://github.com/gabime/spdlog
 [submodule "lib/yas"]
 	path = lib/yas
-	url = https://github.com/niXman/yas
-[submodule "lib/json"]
-	path = lib/json
-	url = https://github.com/nlohmann/json
+	url = https://github.com/Architect0rr/yas
