--- a/src/config.hpp.in
+++ b/src/config.hpp.in
@@ -7,13 +7,16 @@
 #define __MDNCPP_VERSION__ "@MDNCPP_VERSION@"
 #endif // !MDNCPP_VERSION
 
+#ifdef MDNCPP_CONF_ENABLE_PROFILING
+    #define __MDN_PROFILING__
+#endif // MDNCPP_CONF_ENABLE_PROFILING
 
-#ifdef MDNCPP_BUILD_DEBUG
-#define __MDN_BUILD_DEBUG_CODE__
-#endif // MDN_BUILD_DEBUG
+#ifdef MDNCPP_CONF_CALC_ENTHROPY
+    #define __CALC_ENTHROPY__
+#endif // MDNCPP_CONF_CALC_ENTHROPY
 
-#ifdef MDNCPP_ENABLE_PROFILING
-#define __MDN_PROFILING__
-#endif // MDNCPP_ENABLE_PROFILING
+#ifdef MDNCPP_CONF_KE_PE_PRESENT
+    #define __KE_PE_PRESENT__
+#endif // MDNCPP_CONF_KE_PE_PRESENT
 
 #endif // !__MDN_CONFIG_HPP__
