Changed calculation logic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,17 @@ else()
     message("Ke, pe pesent: no")
 endif()
 
+if(DEFINED MDNCPP_TRACE_OUT)
+    if(MDNCPP_TRACE_OUT STREQUAL ON)
+        message("Trace out: on")
+        add_definitions(-DMDNCPP_CONF_TRACE_OUT)
+    else()
+        message("Trace out: off")
+    endif()
+else()
+    message("Trace out: off")
+endif()
+
 set(CMAKE_STAGING_PREFIX ${PROJECT_SOURCE_DIR}/build/stage)
 set(CMAKE_CXX_FLAGS_Release "-O3")
 set(CMAKE_CXX_FLAGS_Debug "-O3 -Wall")
